UPDATE: Separated handleNewTrip() into different methods